feat: style home page with dark theme

--- a/LucidMind-Frontend/web/index.html
+++ b/LucidMind-Frontend/web/index.html
@@ -10,6 +10,9 @@
     <script src="packages/react/react.js"></script>
     <script src="packages/react/react_dom.js"></script>
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles.css">
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
