--- a/LucidMind-Frontend/web/index.html
+++ b/LucidMind-Frontend/web/index.html
@@ -16,8 +16,31 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
+    <!-- Firebase App (compat) -->
+    <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
+
+    <!-- Firebase Auth (compat) -->
+    <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-analytics-compat.js"></script>
+
+    <!-- Load Firebase config from env.js -->
+    <script src="env.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script>
+      if (window.firebaseConfig) {
+        firebase.initializeApp(window.firebaseConfig);
+        if (firebase.analytics) {
+          firebase.analytics(); // Avoid runtime error if omitted
+        }
+      } else {
+        console.error('❌ window.firebaseConfig not found — check if env.js is loaded correctly.');
+      }
+    </script>
+
     <!-- NOTE: "index" should correspond to the
-         name of the `.dart` file that contains your `main()` entrypoint. -->
+          name of the `.dart` file that contains your `main()` entrypoint. -->
     <script type="application/javascript" defer src="main.dart.js"></script>
   </body>
 </html>
