feat: add favicon image

--- a/LucidMind-Frontend/web/index.html
+++ b/LucidMind-Frontend/web/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>LucidMind</title>
+    <link rel="icon" type="image/x-icon" href="/assets/LucidMind_Logo.svg">
   </head>
   <body>
     <div id="react_mount_point">
