feat: add styles for home page

--- a/LucidMind-Frontend/web/index.html
+++ b/LucidMind-Frontend/web/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>LucidMind</title>
     <link rel="icon" type="image/x-icon" href="/assets/LucidMind_Logo.svg">
+    <link rel="stylesheet" href="packages/your_package_name/css/home_page.css">
   </head>
   <body>
     <div id="react_mount_point">
